# sparkles

./: .editorconfig  .envrc  .gitattributes  .gitignore  .prettierignore  .prettierrc.cjs  AGENTS.md  README.md  dub.sdl  flake.nix  initial-prompt.md  lychee.ci.exclude  lychee.exclude  lychee.toml  package-lock.json  package.json  platform-demos-research-plan.md
.agents/skills/writing-docs/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  lint.yml  notify-dub-registry.yml  release.yml
.opencode/plans/: api-doc-generator-design.md
apps/age/: dub.sdl
apps/age/src/: age.d  age_keygen.d
apps/ci/: dub.sdl  dub.selections.json
apps/ci/src/: app.d  ci_stats.d  dub_deps.d  example_manifest.d
apps/doc-coverage-fixture/: dub.sdl  sparkle-docs.json
apps/hue/: dub.sdl  dub.selections.json
apps/hue/src/: app.d  gui.d  gui_ansi.d  gui_preview.d  gui_text.d  previewer.d
apps/nvme-sanitize/: dub.sdl  dub.selections.json
apps/nvme-sanitize/src/: main.d
apps/release/: dub.sdl  dub.selections.json
apps/release/src/: agents.d  app.d  bump.d  conventional.d  git.d  notes.d  preflight.d  result.d  stages.d  stats.d
apps/sparkle-docs/: dub.sdl  dub.selections.json
apps/sparkle-docs/source/: main.d
apps/terminal/: dub.sdl
apps/terminal-benchmark/: README.md  dub.sdl
apps/terminal-benchmark/src/: app.d  bench.d
apps/terminal/src/: app.d  input.d  osc_query.d  posix_util.d
docs/: [filepath].md  [filepath].paths.ts  [path].md  [path].paths.ts  index.md  overview.md  test-include.md
docs/.vitepress/: config.mts
docs/.vitepress/scripts/: api-data.mjs  build-api.mjs  generate-api-pages.mjs
docs/.vitepress/theme/: Breadcrumbs.vue  InstallInstructions.vue  Layout.vue  Tooltip.vue  custom.css  index.mts
docs/api/: index.md
docs/api/symbols/: sparkles.core_cli.args.clioption--struct.md  sparkles.core_cli.args.clioption.aliases.md  sparkles.core_cli.args.clioption.clioption.md  sparkles.core_cli.args.clioption.description.md  sparkles.core_cli.args.clioption.md  sparkles.core_cli.args.getoption.md  (+246 more)
docs/apps/: index.md
docs/guidelines/: AGENTS.md  benchmarking-and-profiling.md  code-style.md  ddoc.md  ddoc_ies_interaction.d  design-by-introspection-00-intro.md  design-by-introspection-01-guidelines.md  dstyle.md  functional-declarative-programming-guidelines.md  importc-c-libraries.md  interpolated-expression-sequences.md  release.md  research-docs.md
docs/libs/: index.md
docs/public/: spk-text.wasm
docs/research/: dlang-doc-generators.md
docs/research/monorepo-tooling/bazel/sample/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
docs/research/monorepo-tooling/bazel/sample/app/: BUILD.bazel  main.cpp
docs/research/monorepo-tooling/bazel/sample/mathlib/: BUILD.bazel  add.cpp  add.h
docs/research/monorepo-tooling/cargo/sample/: Cargo.toml
docs/research/monorepo-tooling/cargo/sample/.cargo/: config.toml
docs/research/monorepo-tooling/cargo/sample/crates/cli/: Cargo.toml
docs/research/monorepo-tooling/cargo/sample/crates/cli/src/: main.rs
docs/research/monorepo-tooling/cargo/sample/crates/greeter/: Cargo.toml
docs/research/monorepo-tooling/cargo/sample/crates/greeter/src/: lib.rs
docs/research/monorepo-tooling/uv/sample/: .editorconfig  .gitignore  pyproject.toml
docs/research/monorepo-tooling/uv/sample/scripts/: check.py
docs/research/monorepo-tooling/uv/sample/src/albatross/: __init__.py  main.py
docs/scripts/: build-twoslash-showcase.sh  build-wasm.sh
docs/specs/: api-reference.md  index.md
libs/age/: dub.sdl
libs/base/: dub.sdl
libs/base/tools/text-conformance/oracles/uwidth-rs/: Cargo.toml
libs/base/tools/text-conformance/oracles/uwidth-rs/src/: main.rs
libs/build-primitives/: dub.sdl
libs/core-cli/: dub.sdl
libs/crypto/: dub.sdl
libs/effects-benchmarks/: dub.sdl  dub.selections.json  effects-benchmarks
libs/effects-direct/: dub.sdl
libs/effects-ts/: dub.sdl
libs/event-horizon/: dub.sdl  tsan-suppressions.txt
libs/ghostty/: dub.sdl
libs/http/: dub.sdl  dub.selections.json
libs/markdown/: SPEC.md  TESTING.md  dub.sdl
libs/math/: dub.sdl
libs/raylib-text/: dub.sdl
libs/semver/: dub.sdl
libs/serde/: dub.sdl
libs/syntax/: dub.sdl
libs/sysinfo/: dub.sdl  dub.selections.json
libs/test-runner/: dub.sdl
libs/test-runner-impl/: dub.sdl  dub.selections.json
libs/test-utils/: dub.sdl
libs/tree-sitter/: dub.sdl
libs/tui/: dub.sdl
libs/twoslash/: dub.sdl
libs/versions/: dub.sdl
libs/wired/: dub.sdl
libs/wired/bench/runtime/shims/rust/: Cargo.toml  build.rs
libs/wired/bench/runtime/shims/rust/src/: lib.rs  serde_engine.rs  simdjson_engine.rs  sonic_engine.rs  twitter.rs  versions.rs
nix/: d-toolchain.nix  dub-lock.json
nix/checks/: pre-commit.nix
nix/shells/: android.nix  default.nix  win32-cross.nix
scripts/: ci.d  dedup_md_reference_links.d  run-examples.sh  run-tests.sh  run_benchmarks.d  run_md_examples.d
(+2055 files in other folders)
