# Workspace root + root member `albatross`.
# `uv lock` resolves this whole workspace into one `uv.lock`;
# `uv sync` installs every member into one shared `.venv`.
[project]
name = "albatross"
version = "0.1.0"
description = "Workspace root that depends on the local `bird-feeder` member."
requires-python = ">=3.12"
dependencies = [
  "bird-feeder",
  "tqdm>=4,<5",
]

[project.scripts]
# A task entry point: `uv run greet` calls albatross.main:main.
greet = "albatross.main:main"

# Local cross-reference: pull `bird-feeder` from this workspace, not PyPI.
[tool.uv.sources]
bird-feeder = { workspace = true }

# Virtual-style member glob (root is also a member via its [project] table).
[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"
